--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-build-backend = "flit_core.buildapi"
-requires = ["flit_core >=3.8.0,<4"]
-
 [project]
 name = "watson2sf"
 version = "0.1.0"
@@ -11,19 +7,24 @@ authors = [
 description = "Convert Watson's CSV output to Selenium IDE script from mfo"
 readme = "README.md"
 requires-python = ">=3.8"
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "License :: OSI Approved :: MIT License",
-    "Natural Language :: English",
-    "Operating System :: OS Independent",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-]
-dependencies = [
-    "Click",
-    "tomli",
-]
 
-[project.scripts]
+
+[tool.poetry.scripts]
 watson2sf = "watson2sf:cli"
+
+[tool.poetry]
+name = "watson2sf"
+version = "0.1.0"
+description = ""
+authors = ["Tom Moyer <tommoyer@gmail.com>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.10"
+click = "^8.1.3"
+tomli = "^2.0.1"
+
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
